pom.xml refactoring

--- a/pom.xml
+++ b/pom.xml
@@ -68,6 +68,11 @@
                 </configuration>
             </plugin>
         </plugins>
+        <resources>
+            <resource>
+                <directory>src/test/resources</directory>
+            </resource>
+        </resources>
     </build>
 
 </project>
